# serialPortTools

./: .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md  cmdlineedit.cpp  cmdlineedit.h  cmdlineedit.ui  cmdwidget.cpp  cmdwidget.h  inputdialog.cpp  inputdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  outTextEdit.cpp  outTextEdit.h  resources.qrc  serialwindow.cpp  serialwindow.h  serialwindow.ui  settingswindow.cpp  settingswindow.h  settingswindow.ui  tabwindow.cpp  tabwindow.h  tabwindow.ui
res/translations/: en_US.qm  en_US.ts  zh_CN.qm  zh_CN.ts
src/: README.md  cmdlineedit.cpp  cmdwidget.cpp  inputDialog.cpp  inputDialog.ui  inputdialog.cpp  inputdialog.h  main.cpp  mainWindow.cpp  mainWindow.ui  mainwindow.cpp  mainwindow.h  serialserver.cpp  serialserver.h  serialserver.ui  serialwindow.cpp  serialwindow.h  serialwindow.ui  settings.cpp  settings.h  settingswindow.cpp  settingswindow.h
src/inc/: threadPool.h
src/serialServer/: serialServer.cpp  serialServer.h  serialserver.cpp  serialserver.ui  tcpServer.h
src/serialWindow/: cmdLineEdit.cpp  cmdWidget.cpp  cmdWidget.h  cmdWidget.ui  cmdwidget.cpp  cmdwidget.ui  outTextEdit.cpp  serialWindow.cpp  serialWindow.h  serialWindow.ui  serialwindow.cpp  serialwindow.h  serialwindow.ui
src/settingsWindow/: settingsWindow.cpp  settingsWindow.h  settingsWindow.ui  settingswindow.cpp  settingswindow.h
src/sftpWindow/: loginDialog.cpp  loginDialog.h  loginDialog.ui  sftpClient.cpp  sftpClient.h  sftpClientResponse.h  sftpClientThread.cpp  sftpClientThread.h  sftpWindow.cpp  sftpWindow.h  sftpWindow.ui
translations/: en_US.qm  en_US.ts  zh_CN.ts
